--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,22 +20,28 @@
         android:layout_marginBottom="20dp"/>
 
     <EditText
+        android:id="@+id/LoginUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username"
-        android:inputType="text"
-        android:maxLines="1"
+        android:layout_marginBottom="10dp"
         android:hint="enter username"
-        android:layout_marginBottom="10dp"/>
+        android:inputType="text"
+        android:maxLines="1" />
 
-    <EditText
+    <Spinner
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/password"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        android:hint="enter password"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:id="@+id/noCompany"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="No hay instituciones agregadas"
+        android:visibility="gone" />
 
     <Button
         android:layout_width="match_parent"
@@ -51,5 +57,14 @@
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/register"/>
+
+    <TextView
+        android:id="@+id/admin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="Are you an Admin? Click here"
+        android:textSize="20dp" />
 
 </LinearLayout>
