--- a/app/src/main/res/layout/activity_compania.xml
+++ b/app/src/main/res/layout/activity_compania.xml
@@ -29,16 +29,14 @@
 
     <ListView
         android:id="@+id/companyList"
-        android:layout_width="368dp"
-        android:layout_height="368dp"
+        android:layout_width="298dp"
+        android:layout_height="349dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/border"
-        android:paddingBottom="30dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
